--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
-    "axios": "^1.13.5",
+    "axios": "^1.13.2",
+    "formik": "^2.4.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.13.0",
-    "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "react-router-dom": "^7.11.0",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.3.8",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
